--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -28,10 +27,9 @@
     "@typescript-eslint/parser": "^4.33.0",
     "core-js": "^3.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
-    "prettier": "^2.4.1",
     "regenerator-runtime": "^0.13.2",
     "stimulus": "^2.0.0",
     "ts-loader": "9.0.0",
